--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 - company: Siemens
   position: Data Scientist(Werkstudium)
   duration: Oct, 2019 &mdash; Sep 2020 (1 year)
-  summary: ML application development <ul class="resume-item-list"><li>Development and evaluation of demand forecasting models (R, AWS, CI/CD, distributed machine learning)</li><li>Research AWS analytics product</li><li>Application troubleshooting</li></ul>
+  summary: ML application development <ul class="resume-item-list"><li>Development and evaluation of demand forecasting models (R, AWS, CI/CD, distributed machine learning)</li><li>Research AWS analytics product such as Sagemaker, AWS Forecast</li><li>Application troubleshooting</li></ul> Explorative Data Analysis (EDA) <ul class="resume-item-list"><li>preprocess and summarise heterogenous dataset (tabular sales data, unstructured machine data in graph format)</li><li>Automation and visualization on a frontend dashboard (Rshiny)</li></ul>
 
 # Director of Digital Stratgy
 - company: United Nations Human Rights Council
