--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,8 +2,8 @@
 # VP of Global Communications
 - company: Siemens
   position: Data Scientist(Werkstudium)
-  duration: Oct, 2019 &mdash; Sep 2020 (1 year)
-  summary: ML application development <ul class="resume-item-list"><li>Development and evaluation of demand forecasting models (R, AWS, CI/CD, distributed machine learning)</li><li>Research AWS analytics product such as Sagemaker, AWS Forecast</li><li>Application troubleshooting</li></ul> Explorative Data Analysis (EDA) <ul class="resume-item-list"><li>preprocess and summarise heterogenous dataset (tabular sales data, unstructured machine data in graph format)</li><li>Automation and visualization on a frontend dashboard (Rshiny)</li></ul>
+  duration: Oct, 2019 &mdash; Sep 2020 (1 year, Germany)
+  summary: ML application development <ul class="resume-item-list"><li>Development and evaluation of demand forecasting models (R, AWS, CI/CD, distributed machine learning)</li><li>Research AWS analytics product such as Sagemaker, AWS Forecast</li><li>Application troubleshooting</li></ul> Explorative Data Analysis (EDA) <ul class="resume-item-list"><li>preprocess and summarise heterogenous dataset (tabular sales data, unstructured machine data in graph format)</li><li>Automation and visualization on a frontend dashboard (Rshiny)</li></ul> COVID-19 preventive policy analysis <ul class="resume-item-list"><li>https://medium.com/@kprm2000/%EA%B5%AD%EA%B0%80%EB%B3%84-%EC%BD%94%EB%A1%9C%EB%82%98-%EB%8C%80%EC%9D%91%EC%A0%95%EC%B1%85-%EA%B3%84%EB%9F%89%EB%B6%84%EC%84%9D-8112aee2f2a</li></ul>
 
 # Director of Digital Stratgy
 - company: United Nations Human Rights Council
