--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,11 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: M.Sc Data Engineering and Analytics
+  uni: Technical University of Munich
+  year: 2018 &mdash; 2021
+#  awards:
+#    - award: Thesis: 
+#  summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: B.Sc in Mathematics & Systems Management Engineering
+  uni: Sungkyunkwan University
+  year: Mar 2010 &mdash; July 2016
