--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,10 +2,12 @@
 - degree: M.Sc Data Engineering and Analytics
   uni: Technical University of Munich
   year: 2018 &mdash; 2021
-#  awards:
-#    - award: Thesis: 
-#  summary: If you had any meaningful roles at college, feel free to write about them here
+  awards:
+    - award: Thesis: Abnormal Events Causal Analysis from Spatio-temporal Human Mobility Network
+  summary: Analyzing Twitter users’ geotags and South Korea’s COVID-19 patients’ routes, figure out how social events affect and are affected by anomalies in a dynamic human mobility graph. Perfect score in the evaluation.
+    - award: Article: Political social media engagement around the COVID-19 pandemic(on-going)
+  summary: Crawling Facebook dataset with restAPI, analyze and predict how COVID-19 information spread from official source to unofficial ones.
 
 - degree: B.Sc in Mathematics & Systems Management Engineering
   uni: Sungkyunkwan University
-  year: Mar 2010 &mdash; July 2016
+  year: 2010 &mdash; 2016
