--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "POOREUMOE KIM"
+resume_name:                    "POOREUMOE KIM, 김푸르뫼"
 resume_title:                   "ML Engineer/Data scientist"
 
 # used for the contact button in _layouts/resume.html
@@ -23,7 +23,7 @@ resume_contact_address:         "Waagstrasse 2, Eching, Germany"
 resume_header_contact_info:     "Waagstrasse 2, Eching, Germany  • kprm2000@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Network analysis, Time seires forecasting, NLP</p>"
+resume_header_intro: "<p>Network analysis, Time seires forecasting, NLP <br>I'm currently searching for a job in South Korea!. </p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
