--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -21,3 +21,8 @@ by anomalies in a dynamic human mobility graph. Perfect score in the university'
   duration: Apr, 2019 &mdash; Aug, 2019
   # url: "#"
   description: Spark ML with Hadoop clusters on a supercomputer for protein prediction.
+
+- project: Emotional Awareness in Autonomous Driving
+  role: Researcher
+  duration: Apr, 2019 &mdash Aug, 2019
+  description: Reviewed and summarized recent researches on behavior modeling according to emotion recognition in autonomous vehicles.
