--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,23 +1,10 @@
-- project: Political social media engagement around the COVID-19 pandemic
-  role: Researcher
-  duration: Oct, 2020 &mdash; present
-  description: Crawling Facebook dataset with restAPI, analyze and model how COVID-19 information spread from official source to unofficial ones.
-  
-- project: Abnormal Events Causal Analysis from Spatio-temporal Human Mobility Network (Thesis project)
-  role: Researcher
-  duration: Mar, 2020 &mdash; Oct, 2020
-  # url: "#"
-  description: Analyzing Twitter users’ geotags and South Korea’s COVID-19 patients’ routes, figure out how social events affect and are affected
-by anomalies in a dynamic human mobility graph. Perfect score in the university's thesis evaluation.
+# Projects
+# uncomment the urls if you wish to display them, and add your own URL
 
-# Springfield Community Outreach Group
-- project: Distributed Data Mining
-  role: Data Engineer
-  duration: Apr, 2019 &mdash; Aug, 2019
+# jazznotes.io
+- project: jazznotes.io
+  role: Founder & Primary Developer
+  duration: 2012 &mdash; Present
   # url: "#"
-  description: Spark ML with Hadoop clusters on a supercomputer for protein prediction.
+  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
 
-- project: Emotional Awareness in Autonomous Driving
-  role: Researcher
-  duration: Apr, 2019 &mdash; Aug, 2019
-  description: Reviewed and summarized recent researches on behavior modeling according to emotion recognition in autonomous vehicles.
