--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,6 +5,10 @@
 - project: Political social media engagement around the COVID-19 pandemic
   role: Researcher
   duration: Oct, 2020 &mdash; present
-  description: Crawling Facebook dataset with restAPI, analyze and model how COVID-19 information spread from official source to unoffici    al ones.
+  description: Crawling Facebook dataset with restAPI, analyze and model how COVID-19 information spread from official source to unofficial ones.
   # url: "#"
+
+- project: Abnormal Events Causal Analysis from Spatio-temporal Human Mobility Network (Thesis project)
+  role: Researcher
+  description: Analyzing Twitter users’ geotags and South Korea’s COVID-19 patients’ routes, figure out how social events affect and are affected
 
