--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,14 +1,22 @@
-# Projects
-# uncomment the urls if you wish to display them, and add your own URL
-
-# jazznotes.io
 - project: Political social media engagement around the COVID-19 pandemic
   role: Researcher
   duration: Oct, 2020 &mdash; present
   description: Crawling Facebook dataset with restAPI, analyze and model how COVID-19 information spread from official source to unofficial ones.
-  # url: "#"
-
+  
 - project: Abnormal Events Causal Analysis from Spatio-temporal Human Mobility Network (Thesis project)
   role: Researcher
-  description: Analyzing Twitter users’ geotags and South Korea’s COVID-19 patients’ routes, figure out how social events affect and are affected
+  duration: Mar, 2020 &mdash; Oct, 2020
+  # url: "#"
+  description: Analyzing Twitter users’ geotags and South Korea’s COVID-19 patients’ routes, figure out how social events affect and are affected by anomalies in a dynamic human mobility graph. Perfect score in the university's thesis evaluation.
 
+# Springfield Community Outreach Group
+- project: Distributed Data Mining
+  role: Data Engineer
+  duration: Apr, 2019 &mdash; Aug, 2019
+  # url: "#"
+  description: Spark ML with Hadoop clusters on a supercomputer for protein prediction.
+
+- project: Emotional Awareness in Autonomous Driving
+  role: Researcher
+  duration: Apr, 2019 &mdash; Aug, 2019
+  description: Reviewed and summarized recent researches on behavior modeling according to emotion recognition in autonomous vehicles.
