--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 # Organizational leadership
 - skill: Data Analytics
-  description: <ul class="resume-item-list"><li>Exploratory Data Analysis</li><li>Graph Analysis (graph visualization, unsupervised anomaly detection, dynamic graph prediction)</li> <li>Natural Language Processing (topic modeling, sentiment analysis)</li><li>Statistics (causal inference, generalized linear modeling, time-series modeling)</li><li>"Tools:" Python (Tensorflow, Keras, Pytorch, Networkx), R (mlr, tidyverse, dplyr, ggplot, rshiny), Gephi,  Excel, Matlab</li></ul>
+  description: <ul class="resume-item-list"><li>Exploratory Data Analysis</li><li>Graph Analysis (unsupervised anomaly detection, dynamic graph prediction)</li> <li>Natural Language Processing (topic modeling, sentiment analysis)</li><li>Statistics (causal inference, time-series modeling)</li><li>Python (Tensorflow, Keras, Pytorch, Networkx), R (mlr, tidyverse, dplyr, ggplot, rshiny), Gephi,  Excel, Matlab</li></ul>
 
 - skill: Data Engineering
   description: <ul class="resume-item-list"><li>Cloud computing (AWS, GCP, MS Azure, Openstack)</li><li>Distributed data process (Splunk, Hadoop, Spark, Java, Scala)</li><li>SQL (MySQL, PostgreSQL, SPARQL)</li></ul>
