--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "Waagstrasse 2, Eching, Germany"
 resume_header_contact_info:     "Waagstrasse 2, Eching, Germany  • kprm2000@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>Network analysis, Time seires forecasting, NLP </p><p>현재 구직 중입니다.</p>"
+resume_header_intro: "<p>Spatio-temporal mobility analysis, Social Network analysis, NLP, Time-series forecasting </p><p>현재 구직 중입니다.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
