--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -7,7 +7,7 @@
   role: Researcher
   duration: Mar, 2020 &mdash; Oct, 2020
   # url: "#"
-  description: Analyzing Twitter users’ geotags and South Korea’s COVID-19 patients’ routes, I figured out how social events affect and are affected by anomalies in a dynamic human mobility graph. It achieved the erfect score in the final thesis evaluation.
+  description: Analyzing Twitter users’ geotags and South Korea’s COVID-19 patients’ routes, I figured out how social events affect and are affected by anomalies in a dynamic human mobility graph. It achieved the perfect score in the final thesis evaluation.
 
 - project: Data Mining Cup
   role: Project Manager
