--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,17 +1,17 @@
 - project: Political social media engagement around the COVID-19 pandemic
   role: Researcher
   duration: Oct, 2020 &mdash; present
-  description: 페이스북 사용자 데이터를 분석하여 COVID-19 관련 정보의 확산패턴 분석 및 시계열 모델링. Crawling with restAPI, Social Network Analysi, NLP, Time-series pediction.
+  description: 페이스북 사용자 데이터를 분석하여 COVID-19 관련 정보의 확산패턴 분석 및 시계열 모델링. Network analysis, NLP, Time-series pediction.
 
 - project: Abnormal Events Causal Analysis from Spatio-temporal Human Mobility Network (Thesis project)
   role: Researcher
   duration: Mar, 2020 &mdash; Oct, 2020
   # url: "#"
-  description: 트위터 사용자들의 이동 데이터와, 국내 COVID-19 확진자들의 동선를 시공간 이동 모형으로 표현/분석/모델링. <p>네트워크 이상치와 사회적 사건 간 인과관계 분석</p><p>이상치 탐지를 위한 비지도학습, 네트워크 예측 모델링</p>
+  description: 트위터 사용자의 이동 데이터와 국내 코로나19 확진자 동선를 시공간 이동모형으로 표현/분석. <p>네트워크 이상치와 사회적 사건 간 인과관계 분석</p><p>이상치 탐지를 위한 비지도학습, 네트워크 예측 모델링</p>
 - project: Data Mining Cup
   role: Project Manager
   duration: Nov, 2019 &madash; Feb, 2020
-  description: As a tutor of Business Analytics course at TUM, I desgined the ML competition and supported students.
+  description: 슈퍼컴퓨터를 이용한 스파크, 하둡 클러스터 구축. 염기서열 데이터 처리를 위한 파이프라인 프로그래밍(Java, Scala, Python)
 # Springfield Community Outreach Group
 - project: Distributed Data Mining
   role: Data Engineer
