--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -11,13 +11,13 @@
 - project: Data Mining Cup
   role: Project Manager
   duration: Nov, 2019 &madash; Feb, 2020
-  description: 슈퍼컴퓨터를 이용한 스파크, 하둡 클러스터 구축. 염기서열 데이터 처리를 위한 파이프라인 프로그래밍(Java, Scala, Python)
+  description: 뮌헨공과대학교내 머신러닝 대회 주최. 데이터 설계 및 학생 지원
 # Springfield Community Outreach Group
 - project: Distributed Data Mining
   role: Data Engineer
   duration: Apr, 2019 &mdash; Aug, 2019
   # url: "#"
-  description: Spark ML with Hadoop clusters on a supercomputer for protein prediction.
+  description: 슈퍼컴퓨터를 이용한 스파크, 하둡 클러스터 구축 <p>염기서열 데이터 처리를 위한 파이프라인 프로그래밍(Java, Scala, Python)</p>
 
 - project: Emotional Awareness in Autonomous Driving
   role: Researcher
