--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -22,15 +22,15 @@
 - project: Emotional Awareness in Autonomous Driving
   role: Researcher
   duration: Apr, 2019 &mdash; Aug, 2019
-  description: Reviewed and summarized recent researches on behavior modeling according to emotion recognition in autonomous vehicles.
+  description: 자율주행차량 탑승자의 감정인지기반 행동모델링을 위한 논문연구
 
 - project: Digital Twin
   role: Data Analyst
   duration: Sep, 2018 &mdash; Feb, 2019
   url: "https://www.di-lab.tum.de/index.php?id=63&L=1"
-  description: Quantitative modeling and simulation of a business process in Celonis SE. The project was rated 'Very good' by the company and labaratory.
+  description: 독일 스타트업 Celonis의 비즈니스 프로세스 시뮬레이션 및 모델링
 
 - project: Data Mining Cup
   role: Data Analyst
   duration: Dec, 2018 &mdash; Jan, 2019
-  description: I predicted potential fault in Telefonica’s network. My team achieved top 5 among 59 teams.
+  description: 뮌핸공과대학교 데이터 분석대회 참여. 장애예측을 위한 Telefonica의 전산망 데이터 분석/모델링. <p>59개 팀 중 5위</p>
