--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -28,7 +28,7 @@
   role: Data Analyst
   duration: Sep, 2018 &mdash; Feb, 2019
   url: "https://www.di-lab.tum.de/index.php?id=63&L=1"
-  description: 독일 스타트업 Celonis의 비즈니스 프로세스 시뮬레이션 및 모델링
+  description: 독일 스타트업 Celonis의 비즈니스 프로세스 시뮬레이션 및 모델링. The project was rated 'Very good' by the company and labaratory.
 
 - project: Data Mining Cup
   role: Data Analyst
