--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,13 +3,13 @@
 - company: Siemens
   position: Data Scientist(Werkstudium)
   duration: Oct, 2019 &mdash; Sep 2020
-  summary: ML application development <ul class="resume-item-list"><li>Development and evaluation of demand forecasting models (R, AWS, CI/CD, distributed machine learning)</li><li>Research AWS analytics product such as Sagemaker, AWS Forecast</li><li>Application troubleshooting</li></ul> Explorative Data Analysis (EDA) <ul class="resume-item-list"><li>preprocess and summarise heterogenous dataset (tabular sales data, unstructured machine data in graph format)</li><li>Automation and visualization on a frontend dashboard (Rshiny)</li></ul> <a href="https://medium.com/@kprm2000/%EA%B5%AD%EA%B0%80%EB%B3%84-%EC%BD%94%EB%A1%9C%EB%82%98-%EB%8C%80%EC%9D%91%EC%A0%95%EC%B1%85-%EA%B3%84%EB%9F%89%EB%B6%84%EC%84%9D-8112aee2f2a", target="_blank">COVID-19 preventive policy analysis</a> <ul class="resume-item-list"></ul> In-company workshop support
+  summary: 머신러닝 어플리케이션 개발 <ul class="resume-item-list"><li>수요예측을 위한 시계열 어플리케이션 개발 및 모델 평가(R, AWS, CI/CD, distributed machine learning)</li><li>AWS 제품 리서치 및 데모 개발(Sagemaker, AWS Forecast)</li><li>Application troubleshooting</li></ul> Explorative Data Analysis (EDA) <ul class="resume-item-list"><li>정형, 비정형 데이터 처리 및 요약 통계수치 작성/보고</li><li>EDA과정 자동화 및 시각화를 위한 프론트엔드 대시보드개발 (Rshiny)</li></ul> <a href="https://medium.com/@kprm2000/%EA%B5%AD%EA%B0%80%EB%B3%84-%EC%BD%94%EB%A1%9C%EB%82%98-%EB%8C%80%EC%9D%91%EC%A0%95%EC%B1%85-%EA%B3%84%EB%9F%89%EB%B6%84%EC%84%9D-8112aee2f2a", target="_blank">국가별 코로나 대응정책 계량분석</a> <ul class="resume-item-list"></ul> 사내 Analytics workshop 지원
 
 # Director of Digital Stratgy
 - company: Technical University of Munich(TUM, 뮌헨공과대학교)
   position: Tutor
   duration:  Oct, 2019 &mdash; Jan, 2020
-  summary: <ul class="resume-item-list"><li>Teach R coding for data manipulation and modeling.</li><li>Instruct mathematical theory such as dimension reduction.</li><li>Design and support a machine learning competition.</li>
+  summary: <ul class="resume-item-list"><li>데이터 처리 및 모델링을 위한 R코딩 교육</li><li>데이터 분석을 위한 수학적 이론 교육(일반화 선형모형, 주성분분석))</li><li>교내 머신러닝 경진대회 주최 및 지원</li>
 
 
 # Communications Coordinator
