--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -33,4 +33,4 @@
 - project: Data Mining Cup
   role: Data Analyst
   duration: Dec, 2018 &mdash; Jan, 2019
-  description: 뮌핸공과대학교 데이터 분석대회 참여. 장애예측을 위한 Telefonica의 전산망 데이터 분석/모델링. <p>59개 팀 중 5위</p>
+  description: 뮌핸공과대학교 데이터 분석대회 참여. 장애예측을 위한 Telefonica의 전산망 데이터 분석. <p>59개 팀 중 5위</p>
