--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -9,11 +9,11 @@
 - company: Technical University of Munich(TUM, 뮌헨공과대학교)
   position: Tutor
   duration:  Oct, 2019 &mdash; Jan, 2020
-  summary: <ul class="resume-item-list"><li>데이터 처리 및 모델링을 위한 R코딩 교육</li><li>데이터 분석을 위한 수학적 이론 교육(일반화 선형모형, 주성분분석))</li><li>교내 머신러닝 경진대회 주최 및 지원</li>
+  summary: <ul class="resume-item-list"><li>데이터 처리 및 모델링을 위한 R코딩 교육</li><li>데이터 분석을 위한 수학적 이론 교육(일반화 선형모형, 주성분분석)</li><li>교내 머신러닝 경진대회 주최 및 지원</li>
 
 
 # Communications Coordinator
 - company: Samsung SDS
   position: Data Engineer
   duration:   Aug, 2016  &mdash; Jan, 2018
-  summary:  스플렁크(Splunk) 클러스터 운영<ul class="resume-item-list"><li>삼성 전자기기의 데이터를 수집하는 스플렁크 분산시스템을 운영</li><li>고객사에 시스템 이슈 및 유지보수에 관한 가이드라인 전달</li><li>유입데이터량 모니터링 및 저장소 관리</li><li>고객 요청에 따른 모니터링 대시보드 작성</li></ul> AWS Data Architect <ul class="resume-item-list"><li>1,000개 이상의 클라우드 자원을 서비스 장애없이 운영</li><li>데이터 엔지니어 및 서비스 담당자들과 커뮤니케이션, 이슈 공유</li><li>고객 요청에 따른 AWS자원 생성(EC2, S3, EMR, RDS)</li><li>클라우드 아키텍쳐 구성(subnets, security groups, VPC)</li></ul> 시스템 데이터 모니터링 및 분석 <ul class="resume-item-list"><li>클라우드 자원들의 리소스 사용량 시각화(CPU, memory or network I/O by AWS) 및 이상치 탐지를 위한 분석</li> <li>사용 대시보드: Cloudwatch, Grafana, Kibana</li></ul>
+  summary:  스플렁크(Splunk) 클러스터 운영<ul class="resume-item-list"><li>삼성 전자기기의 데이터를 수집하는 스플렁크 분산시스템을 운영</li><li>고객사에 시스템 이슈 및 유지보수에 관한 가이드라인 전달</li><li>유입데이터량 모니터링 및 저장소 관리</li><li>고객 요청에 따른 모니터링 대시보드 작성</li></ul> AWS Data Architect <ul class="resume-item-list"><li>1,000개 이상의 클라우드 자원을 서비스 장애없이 운영</li><li>데이터 엔지니어 및 서비스 담당자들과 커뮤니케이션, 이슈 공유</li><li>고객 요청에 따른 AWS자원 생성(EC2, S3, EMR, RDS)</li><li>클라우드 아키텍쳐 구성(subnets, security groups, VPC)</li></ul> 시스템 데이터 모니터링 및 분석 <ul class="resume-item-list"><li>클라우드 자원들의 리소스 사용량 시각화(CPU, memory or network I/O by AWS) 및 이상치 탐지를 위한 분석</li> <li>Cloudwatch, Grafana, Kibana</li></ul>
