--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "Waagstrasse 2, Eching, Germany"
 resume_header_contact_info:     "Waagstrasse 2, Eching, Germany  • kprm2000@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>Spatio-temporal mobility analysis</p><p>Social Network analysis</p><p>Time-series forecasting</p><p>NLP</p>"
+resume_header_intro: "<p>Spatio-temporal mobility analysis</p><p>Network abnormality analysis</p><p>Time-series forecasting</p><p>NLP</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -37,7 +37,7 @@ resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
 resume_section_skills:          true
-resume_section_recognition:     false
+resume_section_recognition:     true
 resume_section_links:           false
 resume_section_associations:    false
 # resume_section_interests:       true
