--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -2,9 +2,9 @@
 - award: TensorFlow Developer Certificate
   organization: TensorFlow
   year: 2021
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+#  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
 
 - award: Google Machine Learning Bootcamp
   organization: Google Developers
   year: 2004
-  summary: test
+# summary: test
