--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -2,6 +2,7 @@
 - award: TensorFlow Developer Certificate
   organization: TensorFlow
   year: 2021
+  summary: "https://www.credential.net/22603f9e-63f2-4670-8af1-de32d5ff56ec"
 #  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
 
 - award: Google Machine Learning Bootcamp
