--- a/_config.yml
+++ b/_config.yml
@@ -17,13 +17,13 @@ resume_title:                   "ML Engineer/Data scientist"
 resume_contact_email:           "kprm2000@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "+4917-75964673"
-resume_contact_address:         "Waagstrasse 2, Eching, Germany"
+resume_contact_telephone:       "+8210-6794-3389"
+resume_contact_address:         "Yangju-si, Gyeonggi-do, Republic of Korea"
 
-resume_header_contact_info:     "Waagstrasse 2, Eching, Germany  • kprm2000@gmail.com"
+resume_header_contact_info:     " Yangju-si, Gyeonggi-do, Republic of Korea  • kprm2000@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>Machine Learning application developmen    t</p><p>Distributed machine learning on cloud environment</p><p>Spatio-temporal mobility analysis</p><p>Network abnormality analysis</p><p>Time-series forecasting</p>"
+resume_header_intro: "<p>Machine Learning application development</p><p>Distributed machine learning on cloud environment</p><p>Spatio-temporal mobility analysis</p><p>Network abnormality analysis</p><p>Time-series forecasting</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
