--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,4 @@
-- project: Political social media engagement around the COVID-19 pandemic
+- project: <a href="https://github.com/bluethou/COVID19_info_spread_Facebook/blob/main/%5BFinal%5D%20COVID_19_Information_Spread_around_Political_Engagement_on_Facebook.pdf">Political social media engagement around COVID-19 pandemic</a>
   role: Researcher
   duration: Oct, 2020 &mdash; present
   description: 페이스북 사용자 데이터를 분석하여 COVID-19 관련 정보의 확산패턴 분석 및 시계열 모델링.<p>Network analysis, NLP, Time-series pediction.</p><p>Neural Network기반 최종 예측 모델은 Linear model 대비 1/7 수준의 RMSE 기록</p>
