--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,13 @@
+- project: <a href="https://github.com/bluethou/ml_prediction_task/blob/main/Task_description.pdf">Click prediction</a>
+  duration: Feb, 2021
+  description: 웹 기반 광고의 클릭 데이터를 분석하여, 클릭 후 실제 구매 행위로 이어지는 확률 예측 모델링
+
 - project: <a href="https://github.com/bluethou/COVID19_info_spread_Facebook/blob/main/%5BFinal%5D%20COVID_19_Information_Spread_around_Political_Engagement_on_Facebook.pdf">Political social media engagement around COVID-19 pandemic</a>
   role: Researcher
-  duration: Oct, 2020 &mdash; present
+  duration: Oct, 2020 &mdash; March, 2021
   description: 페이스북 사용자 데이터를 분석하여 COVID-19 관련 정보의 확산패턴 분석 및 시계열 모델링.<p>Network analysis, NLP, Time-series pediction.</p><p>Neural Network기반 최종 예측 모델은 Linear model 대비 1/7 수준의 RMSE 기록</p>
 
-- project: Abnormal Events Causal Analysis from Spatio-temporal Human Mobility Network (Thesis project)
+- project: <a href="https://github.com/bluethou/Abnormality_in_dynamic_mobility_graph/blob/main/KIM_thsis_presentation_29Oct.pdf">Abnormal Events Ca    usal Analysis from Spatio-temporal Human Mobility Network</a>
   role: Researcher
   duration: Mar, 2020 &mdash; Oct, 2020
   # url: "#"
